<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/signin"
        android:hint="User Name"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userpassword"
        android:layout_below="@+id/username"
        android:hint="Password"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userpassword"
        android:layout_alignStart="@+id/userpassword"
        android:layout_marginStart="85dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="LOGIN" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userpassword"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/login_button"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="SIGN UP" />

    <TextView
        android:id="@+id/themeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="31dp"
        android:text="Theme Setting"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/themeText"
        android:orientation="vertical">

        <Button
            android:id="@+id/defaultThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="134dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:gravity="center"
            android:text="Default Theme"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tealThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/defaultThemeBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="147dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:gravity="center"
            android:text="Teal Theme"
            android:textSize="12sp" />

        <Button
            android:id="@+id/orangeThemeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tealThemeBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="138dp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center"
            android:text="Orange Theme"
            android:textSize="12sp" />
    </RelativeLayout>



</RelativeLayout>