<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />

        <Button
            android:id="@+id/mapBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_below="@id/toolbar"/>

        <TextView
            android:id="@+id/latLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_below="@id/toolbar"
            android:layout_toEndOf="@id/mapBackButton"/>

        <WebView
            android:id="@+id/webView"
            android:layout_width="403dp"
            android:layout_height="723dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/mapBackButton"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>