...
        android:padding="20dp" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmuserpassword"
        android:layout_below="@+id/userpassword"
        android:hint="Retype your Password"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp" />

...
